@@ -1,6 +1,7 @@
 package CRMTest;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -12,8 +13,11 @@ public class SendHttpRequestToCrm {
         for (int i = 0; i < 200; i++) {
             executor.submit(() -> {
                 try {
-                    String url = "http://crm-dash/login"; // URL-ul de test
-                    HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
+                    String urlString = "http://crm-dash/login"; // URL-ul de test
+                    URI uri = URI.create(urlString); // Creează URI
+                    URL url = uri.toURL(); // Convertește URI în URL
+
+                    HttpURLConnection conn = (HttpURLConnection) url.openConnection();
                     conn.setRequestMethod("POST");
 
                     // Obținem și afișăm doar codul de răspuns
